fixed full width issue

--- a/style.css
+++ b/style.css
@@ -345,6 +345,10 @@ section {
  }
 
 @media only screen and (max-width: 766px){
+    #container{
+        overflow:hidden;
+    }
+
     .menu-header-menu-container{
         padding-left: 25px;
     }
@@ -364,13 +368,13 @@ section {
     }
 
 
+
 }
 
 body{
     background: linear-gradient(90deg, #04619F, #000000);
-    /* background-color: #04619F !important; */
-    /* background-image: linear-gradient(right #7F8C8D,#000000) !important; */
-    /* background-image: linear-gradient(direction, color-stop1, color-stop2, ...); */
+    width: 100% !important;
+
 
     
 }
@@ -516,12 +520,18 @@ body{
 
 .contact-title{
     text-align: center;
-
+    max-width:100%!important;
 }
 
 .wpcf7{
     justify-content: center !important;
     align-items: center !important;
+    max-width:100% !important;
+}
+
+.wpcf7-form{
+    max-width:100% !important;
+    width: 100% !important;
 }
 
 .mainform input[type="submit"]
@@ -530,14 +540,25 @@ background-color: #03e9f4;
   font-weight: 700;
   color:black !important;
   width: 200px;
+  max-width:100%!important;
   height: 40px;
   margin:20%;
   text-align: center;
 
 }
 
+.mainform input[type="text, email"]
+{
+    max-width: 100%!important;
+
+
+}
+
+
 input, textarea{
     color:black !important;
+    max-width: 100%!important;
+
 }
 
 .words{
@@ -566,3 +587,7 @@ input, textarea{
   {
     border-right:1px solid white;
   }
+
+.projects-names{
+    max-width: 100%!important;
+}
