added social media icons

--- a/style.css
+++ b/style.css
@@ -591,3 +591,8 @@ input, textarea{
 .projects-names{
     max-width: 100%!important;
 }
+
+.social-icons:hover{
+    height: 70px!important;
+    width: 70px!important;
+}
